# setlists-v2

./: .gitignore  README.md  WORKSPACE
.github/workflows/: android.yml
libraries/setlists-api/api/: BUILD.bazel
libraries/setlists-api/api/src/main/: AndroidManifest.xml
libraries/setlists-api/api/src/main/kotlin/com/coreywjohnson/setlists/api/: SetlistApiModule.kt  SetlistService.kt
libraries/setlists-api/model/: BUILD.bazel
libraries/setlists-api/model/src/main/kotlin/com/coreywjohnson/setlists/api/: Artist.kt  Artists.kt  Cities.kt  City.kt  Coords.kt  Countries.kt  Country.kt  Error.kt  Set.kt  Setlist.kt  Setlists.kt  Song.kt  Tour.kt  User.kt  Venue.kt  Venues.kt
setlists-app/app/: BUILD.bazel
setlists-app/app-apk/: BUILD.bazel
setlists-app/app-apk/src/main/: AndroidManifest.xml
setlists-app/app/src/main/: AndroidManifest.xml
setlists-app/app/src/main/kotlin/com/coreywjohnson/setlists/: ApplicationComponent.kt  ApplicationModule.kt  MainActivity.kt  SetlistsApplication.kt
setlists-app/app/src/main/kotlin/com/coreywjohnson/setlists/networking/: NetworkingModule.kt
setlists-app/app/src/main/res/layout/: activity_main.xml
setlists-app/app/src/main/res/values/: strings.xml
